fix background res on mobile

--- a/app.css
+++ b/app.css
@@ -318,6 +318,9 @@ a:visited {
 
 /* Custom, iPhone Retina */ 
 @media only screen and (max-width : 320px) {
+	#landingpage {
+		background-size: auto;
+	}
 
 	#about {
 		height: 800px;
@@ -332,7 +335,7 @@ a:visited {
 	#text {
 		margin-top: 40px;
 	}
-	
+
 	#text h1{
 		text-align: center;
 	}
